<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileFragment">

    <data>
        <variable
            name="viewModel"
            type="com.gbdev.ghostbarber.ui.profile.ProfileViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1">

        <!-- Fixed Navigation Bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside">

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:contentDescription="@string/home"
                android:src="@drawable/ic_home"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/aiHairstyleButton"
                android:scaleType="fitCenter"
                android:layout_marginEnd="4dp"/>

            <ImageButton
                android:id="@+id/aiHairstyleButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:contentDescription="@string/message"
                android:src="@drawable/ic_ai_hairstyle"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintStart_toEndOf="@id/homeButton"
                app:layout_constraintEnd_toStartOf="@+id/reelsButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitCenter"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <ImageButton
                android:id="@+id/reelsButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:contentDescription="@string/reels"
                android:src="@drawable/ic_reels"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintStart_toEndOf="@id/aiHairstyleButton"
                app:layout_constraintEnd_toStartOf="@+id/ic_booking"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitCenter"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <ImageButton
                android:id="@+id/ic_booking"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:contentDescription="@string/cart"
                android:src="@drawable/ic_booking"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintStart_toEndOf="@id/reelsButton"
                app:layout_constraintEnd_toStartOf="@+id/profileButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitCenter"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_profile"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintStart_toEndOf="@id/ic_booking"
                app:layout_constraintEnd_toStartOf="@+id/moreButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitCenter"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:contentDescription="@string/more"
                android:src="@drawable/ic_more"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintStart_toEndOf="@id/profileButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitCenter"
                android:layout_marginStart="4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- RecyclerView for profile details and posts -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/top_navigation_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
